--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.1.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
