--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.1.1",
+    "firebase": "^11.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuefire": "^3.2.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
