--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "primevue": "^4.1.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vuefire": "^3.2.0"
+    "vuefire": "^3.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
